Save and close.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/Less/TheThemeMachine-Bootstrap-Scaffolding.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/Less/TheThemeMachine-Bootstrap-Scaffolding.less
@@ -2,7 +2,13 @@
 @import 'Bootstrap/grid.less';
 @import 'Bootstrap/mixins.less';
 
-@row-background-color:red;
+/*
+    - content must be within columns
+    - columns must be within rows
+    - avoid nesting containers
+*/
+
+@row-background-color: red;
 
 #layout-wrapper {
     .container;
