--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/Site.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/Site.css
@@ -730,6 +730,11 @@ div#layout-wrapper div.user-display span.user-actions span {
     margin-left: 0%;
   }
 }
+/*
+    - content must be within columns
+    - columns must be within rows
+    - avoid nesting containers
+*/
 #layout-wrapper {
   margin-right: auto;
   margin-left: auto;
