--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/TheThemeMachine-Bootstrap-Scaffolding.css
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_BaseTheme/Styles/TheThemeMachine-Bootstrap-Scaffolding.css
@@ -665,6 +665,11 @@
     margin-left: 0%;
   }
 }
+/*
+    - content must be within columns
+    - columns must be within rows
+    - avoid nesting containers
+*/
 #layout-wrapper {
   margin-right: auto;
   margin-left: auto;
