--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/site.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/site.less
@@ -20,7 +20,7 @@ Copyright: N/A
 @import 'less/orchard/_forms.less';
 @import 'less/orchard/_misc.less';
 /*Print*/
-@import 'less/site/_print';
+@import 'less/bigfont/_print';
 
 
 
