--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/BadgeOfHonor.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Views/BadgeOfHonor.cshtml
@@ -1,3 +1,4 @@
 ﻿<div class="credits">
-    <span class="poweredby">@T("Powered by <a href=\"{0}\" target=\"_blank\">Orchard</a>", "http://www.orchardproject.net")</span>    
+    <span class="poweredby">@T("Powered by <a href=\"{0}\" target=\"_blank\">Orchard</a>", "http://www.orchardproject.net")</span>
+    <span class="">Built by <a href="http://www.bigfont.ca">BigFont.ca</a></span>
 </div>
