Include the responsive adwords less.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/site.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Styles/site.less
@@ -9,6 +9,7 @@ Copyright: N/A
 @import 'less/bootstrap-3.1.1/bootstrap.less';
 @import 'less/bigfont/_apa-style.less';// optional
 @import 'less/bigfont/_ie-10.less';
+@import 'less/bigfont/_responsive-adwords.less';
 /*CSS section recommendations from Orchard */
 @import 'less/orchard/_reset.less';
 @import 'less/orchard/_clearing-float.less';
