--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/TheThemeMachineDesigner/Styles/Less/site/_TheThemeMachine-Designer.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/TheThemeMachineDesigner/Styles/Less/site/_TheThemeMachine-Designer.less
@@ -111,6 +111,10 @@ div#layout-wrapper {
             }
         }
     }
+
+    &[id]:before {
+        text-decoration:underline;
+    }
     /*#endregion*/
     /*#region Show topography */
     & {
