--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/Site.less
@@ -1,10 +1,12 @@
-﻿@import "../bootstrap-3.1.1/bootstrap.less";
+﻿@import "less/bootstrap-3.1.1/bootstrap.less";
+@import "less/bigfont/_ie-10.less";
 
 /*
 Theme: Bootstrap 3.1.1 - KongwaHill
 Author: Shaun Luttin @ bigfont.ca
 Copyright: 
 */
+
 
 /*#region General
 ***************************************************************/
