--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/less/bootstrap-3.1.1/variables.less
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Styles/less/bootstrap-3.1.1/variables.less
@@ -353,7 +353,7 @@
 
 // Navbar toggle
 @navbar-default-toggle-hover-bg:           lighten(#4A0F03, 10%);
-@navbar-default-toggle-icon-bar-bg:        #888;
+@navbar-default-toggle-icon-bar-bg:        white;
 @navbar-default-toggle-border-color:       lighten(#4A0F03, 10%);
 
 
