Add TheThemeMachineDesigner css to a module.

--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeMachineDesignerWrapper.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeMachineDesignerWrapper.cshtml
@@ -1,3 +1,4 @@
 ﻿@{
-    Style.Include("The-Theme-Machine-Designer.css");
+    Script.Require("jQueryUI").AtHead();
+    Script.Include("CssLoader.js").AtHead();
 }
