Add javascript to document head.

--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeMachineDesignerWrapper.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeMachineDesignerWrapper.cshtml
@@ -2,3 +2,7 @@
     Script.Require("jQueryUI").AtHead();
     Script.Include("CssLoader.js").AtHead();
 }
+
+<div id="what-do-we-wrap">
+    @Display(Model.Metadata.ChildContent)
+</div>
