Update the module manifest.

--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeMachineDesignerWrapper.cshtml
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/BigFont.TheThemeMachineDesigner/Views/ThemeMachineDesignerWrapper.cshtml
@@ -1,6 +1,10 @@
-﻿@{
+﻿@* 
+    The purpose of this wrapper is simply to add JavaScript to the document HEAD.
+*@
+
+@{
     Script.Require("jQueryUI").AtHead();
     Script.Include("CssLoader.js").AtHead();
 }
 
-    @Display(Model.Metadata.ChildContent)
+@Display(Model.Metadata.ChildContent)
